Adding limit/offset paging to endpoints